<resources>
    <string name="app_name">Doctor Yourself</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="burn">
\n
            •Immerse in cool water for 10 or 15 minutes.\n\n
            •Use compresses if running water isn’t available.\n\n
            •Don’t apply ice. It can lower body temperature and cause further pain and damage.\n\n
            •Don’t break blisters or apply butter or ointments, which can cause infection.\n
    </string>
    <string name="protect">
\n
            •Cover loosely with sterile, nonstick bandage and secure in place with gauze or tape.\n
    </string>
    <string name="prevent">
\n
            Unless the person has a head, neck, or leg injury, or it would cause discomfort:\n\n
                •Lay the person flat.\n\n
                •Elevate feet about 12 inches.\n\n
                •Elevate burn area above heart level, if possible.\n\n
                •Cover the person with coat or blanket.\n\n
    </string>
    <string name="doctor">
\n
            •The doctor can test burn severity, prescribe antibiotics and pain medications, and administer a tetanus shot, if needed.
\n
    </string>
    <string name="headinjury">
       \n Ask them to rest and apply a cold compress to the injury(e.g. icebag, frozen vegetables wrapped in towel). \n\n
    Applying a cold compress to the injury will reduce external swelling and pain. In addiction to the external swelling, when a person suffers a blow to the head, the brain can be shaken head injury (e.g. concussion), which may make them feel sick, drowsy or confused. \n\n

    </string>
    <string name="headinjury2">
        \nIf they become confused, drowsy, vomit or if the fall was greater than 2 times their height, call your local emergency number or get someone else to do it. This could be a sign of serious injury to the head\n\n

    </string>
    <string name="heartattack1">
        \n The person may have persistent vice-like chest pain,or isolated unexplained discomfort in arms, neck, jaw, back or stomach.\n\n
        This pain is caused by blockage of the blood supply to the heart muscle, and the pain will not ease with rest.\n\n
    </string>
    <string name="heartattack2">\nCall 112 as soon as possible, or get someone else to do it because a heart attack is potentially very serious and needs immediate attention.\n</string>
    <string name="heartattack3">
        \nGive the aspirin, as long as they are not allergic. The best is one not enteric(coated).\n\n
        Make sure they are in position that is comfortable for them(e.g. sit them on the floor, lean against a wall or chair).\n
        This will ease the strain on the heart. Sitting them on the floor also means they are less likely to hurt themselves if they collapse.
        Give them constant reassurance while waiting for the ambulance.
        If they are allergic give them aspirin.\n\n
    </string>
    <string name="bleeding1">
        \n Put pressure on the wound with whatever is available to stop or slow down the flow of blood.
        You are acting as a plug to stop the blood escaping.The pressure you provide will help the blood clot and stop the bleeding.\n
    </string>
    <string name="bleeding2">
        \n If the bleeding is severe, call 112 as soon as possible, or get someone else to do it.\n\n
            note: Keep pressure on the wound until help arrives\n\n
    </string>
    <string name="brokenleg1">\n
        Keep the injured leg as still as possible.Do not let the person bear any weight on the leg.\n\n
        Apply ice.\n\n
        Keep the leg raised with pillows or cushions.\n
    </string>
    <string name="brokenleg2">\n
        If you think a thighbone is broken or you are unable to move the person, call 112 and have the person taken to the hospital.\n\n
    </string>
    <string name="brokenleg3">\n
     Treatment will depend on the nature of the injury.\n\n

      A health care provider will examine the person\'s leg and likely do an X-ray.\n\n

      The bone may be realigned and a splint, cast, or brace put on.\n\n
     Surgery may be needed.\n
    </string>
    <string name="choking1">\nGive up to 5 blows between the shoulder blades with the heel of your hand.\n</string>
    <string name="choking2">\nIf the person is not pregnant or too obese, do abdominal thrusts:\n\n
Stand behind the person and wrap your arms around the waist.\n\n
Place your clenched fist just above the person’s navel. Grab your fist with your other hand.\n\n
Quickly pull inward and upward as if trying to lift the person up.\n\n
Perform a total of 5 abdominal thrusts.\n\n
If the blockage is still not dislodged, continue cycles of 5 back blows and 5 abdominal thrusts until the object is coughed up or the person starts to breathe or cough.\n\n
Take the object out of his mouth only if you can see it. Never do a finger sweep unless you can see the object in the person's mouth.
\n</string>
    <string name="choking3">\nWhen emergency medical personnel arrive, they will take over and may do CPR or take the person to the hospital, if needed.\n</string>
    <string name="choking4">
        \nThe person is choking.\n\n
The person is having trouble breathing or has noisy breathing.\n\n
The person is unconscious.\n
</string>
    <string name="spinalinjury1">
        \n
        Contact the emergency services.\n\n
        Keep the casualties in the position found and immobilise by holding the neck and head\n\n
        Ask the casualty to remain as still as possible.\n\n
        Avoid asking questions that will require a nod or headshake.\n\n
        Keep the casualty warm\n    </string>
    <string name="heatstroke1">\n
    A bath of cold or ice water has been proved to be the most effective way of quickly lowering your core body temperature. The quicker you can receive cold water immersion, the less risk of death and organ damage.\n\n
    </string>
    <string name="heatstroke2">\n
If cold water immersion is unavailable, health care workers may try to lower your body temperature using an evaporation method. Cool water is misted on your body while warm air is fanned over you, causing the water to evaporate and cool your skin.\n\n
    </string>
    <string name="heatstroke3">\n
    Another method is to wrap you in a special cooling blanket and apply ice packs to your groin, neck, back and armpits to lower your temperature.\n
    </string>
    <string name="heatstroke4">\n
    If treatments to lower your body temperature make you shiver, your doctor may give you a muscle relaxant, such as a benzodiazepine. Shivering increases your body temperature, making treatment less effective.\n
    </string>
    <string name="cut1">\n
     This helps avoid infection.\n
    </string>
    <string name="cut2">\n
    Minor cuts and scrapes usually stop bleeding on their own. If needed, apply gentle pressure with a clean bandage or cloth and elevate the wound until bleeding stops.\n
    </string>
    <string name="cut4">\n
    Apply a thin layer of an antibiotic ointment or petroleum jelly to keep the surface moist and help prevent scarring. Certain ingredients in some ointments can cause a mild rash in some people. If a rash appears, stop using the ointment.\n
    </string>
    <string name="cut5">\n
 Apply a bandage, rolled gauze or gauze held in place with paper tape. Covering the wound keeps it clean. If the injury is just a minor scrape or scratch, leave it uncovered.\n
    </string>
    <string name="cut6">\n
Do this at least once a day or whenever the bandage becomes wet or dirty.\n
</string>
    <string name="cut7">\n
    Get a tetanus shot if you have not had one in the past five years and the wound is deep or dirty.\n
    </string>
    <string name="cut8">\n
    See a doctor if you see signs of infection on the skin or near the wound, such as redness, increasing pain, drainage, warmth or swelling.\n
    </string>
    <string name="blister1">\n
Try not to pop or drain it.\n
Leave it uncovered or cover loosely with a bandage.\n
Try not to put pressure on the area. If the blister is in a pressure area such as the bottom of the foot, put a donut-shaped moleskin on it.\n
    </string>
    <string name="blister2">\n
    Wash the area with warm water and gentle soap. Do not use alcohol, hydrogen peroxide, or iodine.\n
Smooth down the skin flap that remains.\n
Apply antibiotic ointment to the area.\n
Cover the area loosely with a sterile bandage or gauze.\n
    </string>
    <string name="blister3">\n
    To drain a blister that is large, painful, or in an awkward spot:\n

Wash the area.\n
Sterilize a needle with rubbing alcohol and water.\n
Make a small hole at the edge of the blister. Gently squeeze out the fluid.\n
Wash the blister again and pat dry. Don’t remove the skin over the blister.\n
Smooth down the skin flap.\n
Apply antibiotic ointment.\n
Cover the area loosely with a sterile bandage or gauze.\n
    </string>
    <string name="blister4">\n
    Change the bandage daily and whenever it gets dirty or wet.\n
Avoid wearing shoes or doing the activity that caused the blister until it heals.\n
Wear thick socks or work gloves for blisters on the feet or hands.\n
See a doctor for signs of infection, including pus, fever, red or warm skin around the blister, red streaks leading away from blister, swollen lymph glands, or increased pain or swelling, or if your last tetanus shot was more than 10 years ago.\n
    </string>
    <string name="dia1">\n
    Ask your doctors what fluids are best for you or your child. Here are some basic tips:\n\n
    	Give an adult plenty of clear fluids, like fruit juices, soda, sports drinks and clear broth. Avoid milk or milk based products, alcohol, apple juice, and caffeine while you have diarrhea and for 3 to 5 days after you get better. \n\n
        They may make diarrhea worse.\n\n
    	Give a child or infant frequent sips of a rehydration solution such as Pedialyte, Ceralyte, or Infalyte. Do not add salt tablets to a baby’s bottle.\n\n
    	Make sure the person drinks more fluids than they are losing through diarrhea. If they are unable to keep up with their losses, call a doctor.\n\n
</string>
<string name="dia2">\n
    Have the person rest as needed and avoid strenuous exercise.  Keep a sick child home from school or day care\n
    </string>
<string name="dia3">\n
    	Feed an infant or child easily digested foods; the BRAT diet (bananas, rice, applesauce, and toast) is a good choices as soon as they can tolerate food.\n\n
    	For an adult, add semisolid and low-fiber foods gradually as diarrhea stops. Avoid spicy, greasy, or fatty foods.\n\n
    </string>
    <string name="dia4">\n
    You suspect that you or your child is dehydrated\n\n
    	An infant 3 months old or younger has vomiting or diarrhea.\n\n
    	There is blood or mucus in the stock, or the stool is black.\n\n
    	An over-their-counter diarrhea medication seems to have worsened the diarrhea.\n\n
    	You think the person has traveler\’s diarrhea or drank contaminated water.\n\n
    	The person is taking an antibiotic that may be causing the diarrhea.\n\n
    	There is stomach paint that is no relieved by having a bowel movement.\n\n
    	There is fever.\n\n
    	The person is losing more fluids in his stool than he can replace by drinking fluids.\n\n
    </string>
<string name="dia5">
    Also seek medical attention if:\n\n
    	You or your child has any other medical problems and has diarrhea.\n\n
    	Diarrhea in an adult worsens or doesn\’t clear up after 2 0r 3 days.\n\n
    	A child doesn’t feel better after 24 hours\n\n
    </string>
</resources>