<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.karma.doctoryourself.headinjury"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:isScrollContainer="true">

            <pl.droidsonroids.gif.GifImageView
                android:layout_width="match_parent"
                android:layout_height="183dp"
                android:src="@drawable/cutsgif"

                />

            <TextView


                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1.Wash your hands"
                android:background="@color/minor"
                android:textStyle="bold"
                android:textSize="19sp"
                android:textColor="@color/black"

                />


            <me.biubiubiu.justifytext.library.JustifyTextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cut1"
                android:textColor="@color/black"
                android:background="@color/contentback"
                android:layout_margin="10dp"

                />
            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="2.Stop the bleeding"
                android:textColor="@color/black"
                android:background="@color/minor"
                android:textStyle="bold"
                android:textSize="19sp"
                />

            <me.biubiubiu.justifytext.library.JustifyTextView
                android:id="@+id/text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cut2"
                android:textColor="@color/black"
                android:background="@color/contentback"
                android:layout_margin="10dp"
                />
            />
            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="3. Clean the wound"
                android:textColor="@color/black"
                android:background="@color/minor"
                android:textStyle="bold"
                android:textSize="19sp"
                />

            <me.biubiubiu.justifytext.library.JustifyTextView
                android:id="@+id/text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Rinse the wound with water. Keeping the wound under running tap water will reduce the risk of infection. Wash around the wound with soap. But do not get soap in the wound. And do not use hydrogen peroxide or iodine, which can be irritating. Remove any dirt or debris with a tweezers cleaned with alcohol. See a doctor if you can't remove all debris.\n"
                android:textColor="@color/black"
                android:background="@color/contentback"
                android:layout_margin="10dp"
                />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="4. Apply the antibiotic or petroleum jelly"
                android:textColor="@color/black"
                android:background="@color/minor"
                android:textStyle="bold"
                android:textSize="19sp"
                />

            <me.biubiubiu.justifytext.library.JustifyTextView
                android:id="@+id/text4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cut4"
                android:textColor="@color/black"
                android:background="@color/contentback"
                android:layout_margin="10dp"
                />
            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="5. Cover the wound"
                android:textColor="@color/black"
                android:background="@color/minor"
                android:textStyle="bold"
                android:textSize="19sp"
                />

            <me.biubiubiu.justifytext.library.JustifyTextView
                android:id="@+id/text5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cut5"
                android:textColor="@color/black"
                android:background="@color/contentback"
                android:layout_margin="10dp"
                />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="6. Change the dressing"
                android:textColor="@color/black"
                android:background="@color/minor"
                android:textStyle="bold"
                android:textSize="19sp"
                />

            <me.biubiubiu.justifytext.library.JustifyTextView
                android:id="@+id/text6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cut6"
                android:textColor="@color/black"
                android:background="@color/contentback"
                android:layout_margin="10dp"
                />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="7.Get a tetanus shot"
                android:textColor="@color/black"
                android:background="@color/minor"
                android:textStyle="bold"
                android:textSize="19sp"
                />

            <me.biubiubiu.justifytext.library.JustifyTextView
                android:id="@+id/text7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cut7"
                android:textColor="@color/black"
                android:background="@color/contentback"
                android:layout_margin="10dp"
                />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="8.Watch for signs for infection"
                android:textColor="@color/black"
                android:background="@color/minor"
                android:textStyle="bold"
                android:textSize="19sp"
                />

            <me.biubiubiu.justifytext.library.JustifyTextView
                android:id="@+id/text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cut8"
                android:textColor="@color/black"
                android:background="@color/contentback"
                android:layout_margin="10dp"
                />






        </LinearLayout>
    </ScrollView>


</LinearLayout>
