<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.karma.doctoryourself.HeatStroke">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:isScrollContainer="true">

            <pl.droidsonroids.gif.GifImageView
                android:layout_width="match_parent"
                android:layout_height="144dp"
                android:src="@drawable/heatstrokegif"

                />


            <TextView


                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1.Immerse in cold water"
                android:background="@color/other"
                android:textStyle="bold"
                android:textSize="19sp"
                android:textColor="@color/black"

                />


            <me.biubiubiu.justifytext.library.JustifyTextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/contentback"
                android:layout_margin="10dp"
                android:text="@string/heatstroke1"
                android:textColor="@color/black"
                />
            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="2.Use evaporation cooling techniques"
                android:textColor="@color/black"
                android:background="@color/other"
                android:textStyle="bold"
                android:textSize="19sp"
                />

            <me.biubiubiu.justifytext.library.JustifyTextView
                android:id="@+id/text1"
                android:background="@color/contentback"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/heatstroke2"
                android:textColor="@color/black"
                />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="3.Pack with ice and cooling blankets"
                android:background="@color/other"
                android:textStyle="bold"
                android:textSize="19sp"
                android:textColor="@color/black"
                />
            <me.biubiubiu.justifytext.library.JustifyTextView
                android:id="@+id/text2"
                android:layout_width="match_parent"
                android:background="@color/contentback"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"
                android:text="@string/heatstroke3"
                android:textColor="@color/black"
                />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="4.Give medications to stop shivering"
                android:background="@color/other"
                android:textStyle="bold"
                android:textSize="19sp"
                android:textColor="@color/black"
                />
            <me.biubiubiu.justifytext.library.JustifyTextView
                android:id="@+id/text3"
                android:background="@color/contentback"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/heatstroke4"
                android:textColor="@color/black"
                />




        </LinearLayout>
    </ScrollView>

</LinearLayout>
